Add common features